apps/downtify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downtify
  labels:
    network-dns-egress: "true"
    network-world-egress: "true"
