apps/downtify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: downtify
  namespace: downtify
spec:
  selector:
    app: downtify
  ports:
    - port: 80
      targetPort: 8000
