apps/downtify/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: downtify-lan
  namespace: downtify
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`downtify.wevelsiep.com`)
      kind: Rule
      services:
        - name: downtify
          port: 80
